--- a/14DayHomeRental.hbs
+++ b/14DayHomeRental.hbs
@@ -142,7 +142,7 @@
                             style="display: flex; justify-content: center; align-items: center; width: 445px; height: 445px; min-width: 445px; min-height: 445px; border: 5px solid rgb(235, 235, 235); border-radius: 9999px; z-index: 10; background-color: white;">
                             <div
                                 style="display: flex; justify-content: center; align-items: center; width: 380px; height: 380px; border: 5px solid rgb(228, 225, 234); border-radius: 9999px;">
-                                <div><img src="/client/src/assets/svg/houseFrame.svg" alt="HouseFrameImage"
+                                <div><img src="https://staging-media.taxplanner.pro/planning-icons/houseFrame.svg" alt="HouseFrameImage"
                                         style="width: 340px;">
                                     <p
                                         style="font-size: 1.25rem; line-height: 1.75rem; font-weight: 600; color: rgb(24, 24, 24); text-align: center; margin-top: 24px;">
@@ -156,7 +156,7 @@
                                 style="z-index: 10; display: flex; justify-content: center; align-items: center; flex-direction: column; row-gap: 1rem;">
                                 <div
                                     style="background-color: white; border: 3px solid rgb(174, 143, 247); height: 5rem; width: 5rem; border-radius: 9999px; display: flex; justify-content: center; align-items: center;">
-                                    <img src="/client/src/assets/svg/telephone.svg" alt="TelephoneImage">
+                                    <img src="https://staging-media.taxplanner.pro/planning-icons/telephone.svg" alt="TelephoneImage">
                                 </div>
                                 <div
                                     style="border-radius: 9999px; padding: 3px; height: 160px; width: 160px; display: flex; justify-content: center; align-items: center; background: linear-gradient(rgb(174, 143, 247), rgb(255, 255, 255));">
@@ -205,7 +205,7 @@
                                 </div>
                                 <div
                                     style="background-color: white; border: 3px solid rgb(174, 143, 247); height: 5rem; width: 5rem; border-radius: 9999px; display: flex; justify-content: center; align-items: center;">
-                                    <img src="/client/src/assets/svg/file.svg" alt="FileImage">
+                                    <img src="https://staging-media.taxplanner.pro/planning-icons/file.svg" alt="FileImage">
                                 </div>
                                 <div
                                     style="border: 1px solid rgb(228, 225, 234); background-color: rgba(174, 143, 247, 0.1); width: 15rem; border-radius: 0.5rem; padding: 0.75rem;">
@@ -242,7 +242,7 @@
                                 style="z-index: 10; display: flex; justify-content: center; align-items: center; flex-direction: column; row-gap: 1rem;">
                                 <div
                                     style="background-color: white; border: 3px solid rgb(174, 143, 247); height: 5rem; width: 5rem; border-radius: 9999px; display: flex; justify-content: center; align-items: center;">
-                                    <img src="/client/src/assets/svg/dollarFile.svg" alt="DollarFileImage">
+                                    <img src="https://staging-media.taxplanner.pro/planning-icons/dollarFile.svg" alt="DollarFileImage">
                                 </div>
                                 <div
                                     style="border-radius: 9999px; padding: 3px; height: 160px; width: 160px; display: flex; justify-content: center; align-items: center; background: linear-gradient(rgb(174, 143, 247), rgb(255, 255, 255));">
@@ -272,7 +272,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div><img src="/client/src/assets/svg/path.svg" alt="path img"
+                            </div><img src="https://staging-media.taxplanner.pro/planning-icons/path.svg" alt="path img"
                                 style="position: absolute; top: 24px; left: -125px; width: 1058px; min-width: 1058px;">
                         </div>
                     </div>
